syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import  "rpc_create_user.proto";
import  "rpc_update_user.proto";
import  "rpc_login_user.proto";
import  "rpc_create_Account.proto";
import  "rpc_list_account.proto";
import  "rpc_Create_transfer.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/dbracic21-foi/simplebank/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.3";
    contact: {
      name: "Simple Bank";
      url: "https://github.com/dbracic21-foi/simplebank";
      email: "dariobracic5@gmail.com";
    };
  };
};
service SimpleBank{
    rpc CreateUser (CreatUserRequest) returns (CreatUserResponse){
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to create a new user";
          summary: "Create new user";
        };
      }
      rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){
        option (google.api.http) = {
            patch: "/v1/update_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to updtade a user";
          summary: "Update a user";
        };
      }

    rpc LoginUser(LoginRequest) returns(LoginResponse){
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to login user and get access token & refresh token";
          summary: "Login user";
        };
    }
    rpc  CreateAccount(CreateAccountRequest) returns(CreateAccountResponse){
        option (google.api.http) = {
            post: "/v1/create_account"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to create a new account";
          summary: "Create new account";
        };
    }
    rpc ListAccount(ListAccountsRequest) returns(ListAccountsResponse){
      option (google.api.http) = {
          get: "/v1/list_account"
      };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "Use this API to list all accounts";
        summary: "List all accounts";
      };
  }
  rpc CreateTransfer(CreateTransferRequest) returns(CreateTransferResponse){
    option (google.api.http) = {
        post: "/v1/create_transfer"
        body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new transfer";
      summary: "Create new transfer";
    };
  }
}