syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/dbracic21-foi/simplebank/pb";

message CreatUserRequest{
    string username = 1;
    string full_name = 2;
    string email  = 3;
    string password = 4;

}
message CreatUserResponse {
    User user = 1;
}
